# rust_blog

./: Cargo.toml  README.md
assets/: post.css
posts/: post.md  post2.md
src/: main.rs
templates/: base.html  posts.html
